# resnet-finetuned

./: README.md  main.py  pyproject.toml
