[project]
name = "deeplearning-finalproj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.0",
    "kaggle>=1.7.4.2",
    "kagglehub>=0.3.11",
    "pillow>=11.2.1",
    "torch>=2.6.0",
    "transformers>=4.51.3",
]
